--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                     <div class="divider"></div>
 
                     <div class="form-group">
-                        <label for="skill">KECSES&#201;G:</label>
-                        <input type="number" id="skill" min="0" max="99" value="0" aria-label="Kecseség érték">
+                        <label for="skill">KECSESS&#201;G:</label>
+                        <input type="number" id="skill" min="0" max="99" value="0" aria-label="Kecsesség érték">
                     </div>
 
                     <div class="divider"></div>
