First iteration of character generation

--- a/index.html
+++ b/index.html
@@ -101,27 +101,15 @@
 
             <!-- Action Buttons -->
             <div class="actions">
-                <button id="saveBtn" class="btn btn-primary" aria-label="Mentés">
-                    &#128190; MENT&#201;S
-                </button>
-                <button id="loadBtn" class="btn btn-secondary" aria-label="Betöltés">
-                    &#128194; BET&#214;LT&#201;S
-                </button>
-                <button id="exportBtn" class="btn btn-secondary" aria-label="Exportálás">
-                    &#128229; EXPORT&#193;L&#193;S
-                </button>
-                <button id="importBtn" class="btn btn-secondary" aria-label="Importálás">
-                    &#128193; IMPORT&#193;L&#193;S
-                </button>
-                <button id="diceBtn" class="btn btn-primary" aria-label="Kockadobó">
-                    &#127922; KOCKA
-                </button>
-                <button id="helpBtn" class="btn btn-secondary" aria-label="Súgó">
-                    &#10067; S&#218;G&#211;
-                </button>
-                <button id="resetBtn" class="btn btn-danger" aria-label="Újrakezdés">
-                    &#128260; &#218;JRAKEZD&#201;S
-                </button>
+                <button id="saveBtn" class="btn btn-primary">&#128190; MENT&#201;S</button>
+                <button id="loadBtn" class="btn btn-secondary">&#128194; BET&#214;LT&#201;S</button>
+                <button id="exportBtn" class="btn btn-secondary">&#128229; EXPORT&#193;L&#193;S</button>
+                <button id="importBtn" class="btn btn-secondary">&#128193; IMPORT&#193;L&#193;S</button>
+                <button id="charGenBtn" class="btn btn-primary">&#9889; GENER&#193;L&#193;S</button>
+                <button id="diceBtn" class="btn btn-primary">&#127922; KOCKA</button>
+                <button id="helpBtn" class="btn btn-secondary">&#10067; S&#218;G&#211;</button>
+                <button id="resetBtn" class="btn btn-danger">&#128260; &#218;JRAKEZD&#201;S</button>
+                <input type="file" id="importFile" accept=".json" style="display: none;">
             </div>
 
             <!-- Hidden file input -->
