--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Kalandlap - Digitális karakterlap kaland játékokhoz">
+    <meta name="description" content="Kalandlap - Digitális karakterlap A Baziliszkusz Árnyéka c. könyvhöz">
     <title>Kalandlap</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@400;700;900&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+        rel="stylesheet"> -->
+    <!-- CSS Modules -->
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/chargen.css">
+    <link rel="stylesheet" href="css/dice.css">
 </head>
 
 <body>
@@ -117,7 +120,7 @@
         </main>
     </div>
 
-    <script src="app.js"></script>
+    <script type="module" src="js/app.js"></script>
 </body>
 
 </html>
