--- a/index.html
+++ b/index.html
@@ -6,12 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Kalandlap - Digitális karakterlap A Baziliszkusz Árnyéka c. könyvhöz">
     <title>Kalandlap</title>
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@400;700;900&display=swap"
-        rel="stylesheet"> -->
-    <!-- CSS Modules -->
+    <!-- CSS Modules - Order matters! -->
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/components.css">
     <link rel="stylesheet" href="css/chargen.css">
     <link rel="stylesheet" href="css/dice.css">
 </head>
@@ -77,7 +74,7 @@
                 <section class="equipment-section" aria-label="Felszerelés">
                     <div class="form-group">
                         <label for="equipment">FELSZEREL&#201;S:</label>
-                        <textarea id="equipment" rows="12" placeholder="" aria-label="Felszerelés lista"></textarea>
+                        <textarea id="equipment" rows="12" aria-label="Felszerelés lista"></textarea>
                     </div>
                 </section>
 
@@ -85,14 +82,14 @@
                 <section class="spells-notes-section" aria-label="Varázslatok és jegyzetek">
                     <div class="form-group">
                         <label for="spells">VAR&#193;ZSLATOK:</label>
-                        <textarea id="spells" rows="5" placeholder="" aria-label="Varázslatok lista"></textarea>
+                        <textarea id="spells" rows="5" aria-label="Varázslatok lista"></textarea>
                     </div>
 
                     <div class="divider"></div>
 
                     <div class="form-group">
                         <label for="notes">FELJEGYZ&#201;SEK:</label>
-                        <textarea id="notes" rows="5" placeholder="" aria-label="Jegyzetek"></textarea>
+                        <textarea id="notes" rows="5" aria-label="Jegyzetek"></textarea>
                     </div>
                 </section>
 
