--- a/index.html
+++ b/index.html
@@ -333,8 +333,8 @@
             <h2>REJTVÉNYFEJTŐ</h2>
 
             <div class="puzzle-info">
-                <p><strong>Hogyan működik:</strong></p>
-                <p>Írd be a rejtvény megoldását, és automatikusan megkapod a megfelelő számot!</p>
+                <p><strong>Hogyan működik:</strong> Írd be a rejtvény megoldását, és automatikusan megkapod a megfelelő
+                    számot!</p>
             </div>
 
             <div class="puzzle-input-section">
@@ -351,7 +351,9 @@
             </div>
 
             <div class="puzzle-legend">
-                <h3>Betű-Szám Táblázat</h3>
+                <h3 class="legend-toggle">
+                    <span class="toggle-icon">▼</span> Betű-Szám Táblázat
+                </h3>
                 <div class="legend-grid">
                     <div class="legend-item"><span class="legend-letter">A</span><span class="legend-value">2</span>
                     </div>
